<resources>
    <string name="app_name">Color Board</string>
	<string name="action_reset">Reset</string>
	<string name="action_randomize">Randomize</string>
	<string name="action_settings">Settings</string>
	<string name="action_showUndo">Show Undo</string>
	<string name="action_about">About</string>
	<string name="about_color_board_title">About Color Board</string>
	<string name="about_ok">Thanks!</string>
</resources>
