<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.openfermenter.colorboard.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_randomize"
        android:checkable="true"
        android:title="@string/action_randomize"/>
    <item
        android:id="@+id/action_showUndo"
        android:checkable="true"
        android:title="@string/action_showUndo"/>
    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
